--- a/vignettes/ArtOfAlignmentInR.Rnw
+++ b/vignettes/ArtOfAlignmentInR.Rnw
@@ -65,7 +65,7 @@ options(width=80)
 \caption{\label{f1} The art of multiple sequence alignment.}
 \end{wrapfigure}
 
-This document is intended to illustrate the art of multiple sequence alignment in \R{} using \Rpackage{DECIPHER}.  Even though its beauty is often concealed, multiple sequence alignment is a form of art in more ways than one.  Take a look at Figure 1 for an illustration of what is happening behind the scenes during multiple sequence alignment.  The practice of sequence alignment is one that requires a degree of skill, and it is that art which this vignette intends to convey.  It is simply not enough to ``plug'' sequences into a multiple sequence aligner and blindly trust the result.  An appreciation for the art as well a careful consideration of the results are required.
+This document is intended to illustrate the art of multiple sequence alignment in \R{} using \Rpackage{DECIPHER}.  Even though its beauty is often concealed, multiple sequence alignment is a form of art in more ways than one.  Take a look at Figure \ref{f1} for an illustration of what is happening behind the scenes during multiple sequence alignment.  The practice of sequence alignment is one that requires a degree of skill, and it is that art which this vignette intends to convey.  It is simply not enough to ``plug'' sequences into a multiple sequence aligner and blindly trust the result.  An appreciation for the art as well a careful consideration of the results are required.
 
 What really is multiple sequence alignment, and is there a single correct alignment?  Generally speaking, alignment seeks to perform the act of taking multiple divergent biological sequences of the same ``type'' and fitting them to a form that reflects some shared quality.  That quality may be how they look structurally, how they evolved from a common ancestor, or optimization of a mathematical construct.  As with most multiple sequence aligners, \Rpackage{DECIPHER} is ``trained'' to maximize scoring metrics in order to accomplish a combination of both structural alignment and evolutionary alignment.  The idea is to give the alignment a biological basis even though the molecules that the sequences represent will never meet each other and align under any natural circumstance.
 
@@ -75,7 +75,7 @@ The workhorse for sequence alignment in \Rpackage{DECIPHER} is \Rfunction{AlignP
 \item The second function, \Rfunction{AlignDB}, enables generating alignments from many more sequences than are possible to fit in memory.  Its main purpose is to merge sub-alignments where each alignment alone is composed of many thousands of sequences.  This is accomplished by storing all of the aligned sequences in a database and only working with ``profiles'' representing the alignment.
 \item The function \Rfunction{AdjustAlignment} takes in an existing alignment and shifts groups of gaps right and left to achieve a better alignment.  Its purpose is to eliminate artifacts that accumulate during progressive alignment, and to replace the tedious \& subjective process of manually correcting an alignment.
 \item Finally, \Rfunction{StaggerAlignment} will create a ``staggered'' alignment by separating potentially non-homologous positions into separate columns.  This function will help minimize false homologies when building a phylogenetic tree, although the resulting alignment is not as aesthetically pleasing.
-\item The functions \Rfunction{FindSynteny} and \Rfunction{AlignSynteny} can be used in combination to perform pairwise alignment of homologous regions from multiple genomes or non-collinear sequences.  These functions interact with a sequence database containing the genomes, which can each be comprised of multiple sequences (i.e., contigs or chromosomes).
+\item The functions \Rfunction{FindSynteny} and \Rfunction{AlignSynteny} can be used in combination to perform pairwise alignment of homologous regions from multiple genomes or non-collinear sequences.  These functions interact with a sequence database containing the genomes, which can each be comprised of multiple sequences (i.e., scaffolds, contigs, or chromosomes).
 \end{enumerate}
 
 %------------------------------------------------------------
@@ -87,11 +87,11 @@ The workhorse for sequence alignment in \Rpackage{DECIPHER} is \Rfunction{AlignP
 \caption{\label{f2} The possible alignment space.}
 \end{wrapfigure}
 
-The dynamic programming method using by \Rpackage{DECIPHER} for aligning two profiles requires order \code{N*M} time and memory space where \code{N} and \code{M} are the width of the pattern and subject.  Since multiple sequence alignment is an inherently challenging problem for large sequences, heuristics are employed to maximize speed while maintaining reasonable accuracy.  In this regard, the two control parameters available to the user are \Rfunarg{restrict} and \Rfunarg{anchor}.  The objective of the \Rfunarg{restrict} parameter is to convert the problem from one taking quadratic time to linear time.  The goal of the \Rfunarg{anchor} parameter is do the equivalent for memory space so that very long sequences can be efficiently aligned.
+The dynamic programming method used by \Rpackage{DECIPHER} for aligning two profiles requires order \code{N*M} time and memory space where \code{N} and \code{M} are the width of the pattern and subject.  Since multiple sequence alignment is an inherently challenging problem for long sequences, heuristics are employed to maximize speed while maintaining reasonable accuracy.  In this regard, the two control parameters available to the user are \Rfunarg{restrict} and \Rfunarg{anchor}.  The objective of the \Rfunarg{restrict} parameter is to convert the problem from one taking quadratic time to linear time.  The goal of the \Rfunarg{anchor} parameter is do the equivalent for memory space so that very long sequences can be efficiently aligned.
 
-The orange diagonal line in Figure 2 shows the optimal path for aligning two sequence profiles.  The blue segments to the left and right of the optimal path give the constraint boundaries, which the user controls with the \Rfunarg{restrict} parameter.  Areas above and below the upper and lower (respectively) constraint boundaries are neglected from further consideration.  A higher (less negative) value of \Rfunarg{restrict[1]} will further constrain the possible ``alignment space,'' which represents all possible alignments between two sequences.  Since the optimal path is not known till completion of the matrix, it is risky to overly constrain the matrix.  This is particularly true in situations where the sequences are not mostly overlapping because the optimal path will likely not be diagonal, causing the path to cross a constraint boundary.  In the non-overlapping case \Rfunarg{restrict[1]} could be set below the default to ensure that the entire ``alignment space'' is available.
+The orange diagonal line in Figure \ref{f2} shows the optimal path for aligning two sequence profiles.  The blue segments to the left and right of the optimal path give the constraint boundaries, which the user controls with the \Rfunarg{restrict} parameter.  Areas above and below the upper and lower (respectively) constraint boundaries are neglected from further consideration.  A higher (less negative) value of \Rfunarg{restrict[1]} will further constrain the possible ``alignment space,'' which represents all possible alignments between two sequences.  Since the optimal path is not known till completion of the matrix, it is risky to overly constrain the matrix.  This is particularly true in situations where the sequences are not mostly overlapping because the optimal path will likely not be diagonal, causing the path to cross a constraint boundary.  In the non-overlapping case \Rfunarg{restrict[1]} could be set below the default to ensure that the entire ``alignment space'' is available.
 
-Neglecting the ``corners'' of the alignment space effectively converts a quadratic time problem into a near-linear time problem.  We can see this by comparing \Rfunction{AlignProfiles} with and without restricting the matrix at different sequence lengths.  To extend our comparison we can include the \Rpackage{Biostrings} function \Rfunction{pairwiseAlignment}.  In this simulation, two sequences with 90\% identity are aligned and the elapsed time is recorded for a variety of sequence lengths.  As can be seen in Figure 3 below, \textit{without} restriction \Rfunction{AlignProfiles} takes quadratic time in the same manner as \Rfunction{pairwiseAlignment}.  However, \textit{with} restriction \Rfunction{AlignProfiles} takes linear time, requiring only a few microseconds per nucleotide.
+Neglecting the ``corners'' of the alignment space effectively converts a quadratic time problem into a near-linear time problem.  We can see this by comparing \Rfunction{AlignProfiles} with and without restricting the matrix at different sequence lengths.  To extend our comparison we can include the \Rpackage{Biostrings} function \Rfunction{pairwiseAlignment}.  In this simulation, two sequences with 90\% identity are aligned and the elapsed time is recorded for a variety of sequence lengths.  As can be seen in Figure \ref{f3} below, \textit{without} restriction \Rfunction{AlignProfiles} takes quadratic time in the same manner as \Rfunction{pairwiseAlignment}.  However, \textit{with} restriction \Rfunction{AlignProfiles} takes linear time, requiring far less than a microsecond per nucleotide.
 
 \begin{centerfig}
 <<expr0,eval=TRUE,echo=FALSE,results=hide,fig=TRUE,include=TRUE,height=6.8,width=8.5>>=
@@ -169,25 +169,32 @@ legend("bottomright",
 	pch=c(1, 0, 5, 2), lty=3,
 	col=c("black", "blue", "red", "green"), bg="white")
 @
-\caption{Global Pairwise Sequence Alignment Timings.}
+\caption{\label{f3} Global Pairwise Sequence Alignment Timings.}
 \end{centerfig}
 
 \medskip
 
-The parameter \Rfunarg{anchor} controls the fraction of sequences that must share a common region to anchor the alignment space (Fig. 2).  \Rfunction{AlignProfiles} will search for shared anchor points between the two sequence sets being aligned, and if the fraction shared is above \Rfunarg{anchor} (70\% by default) then that position is fixed in the ``alignment space.''  Anchors are 15-mer (for DNA/RNA) or 7-mer (for AA) exact matches between two sequences that must occur in the same order in both sequence profiles.  Anchoring generally does not affect accuracy, but can greatly diminish the amount of memory required for alignment.  In Fig. 2, the largest white box represents the maximal memory space required with anchoring, while the entire alignment space (grey plus white areas) would be required without anchoring.  The longest pair of sequence profiles that can be aligned without anchoring is 46 thousand nucleotides as shown by the end of the red dotted line in Figure 3.  If regularly spaced anchor points are available then the maximum sequence length is greatly extended.  In the vast majority of cases anchoring gives the same result as without anchoring, but with less time and memory space required.
+The parameter \Rfunarg{anchor} controls the fraction of sequences that must share a common region to anchor the alignment space (Fig. \ref{f2}).  \Rfunction{AlignProfiles} will search for shared anchor points between the two sequence sets being aligned, and if the fraction shared is above \Rfunarg{anchor} (70\% by default) then that position is fixed in the ``alignment space.''  Anchors are 15-mer (for DNA/RNA) or 7-mer (for AA) exact matches between two sequences that must occur in the same order in both sequence profiles.  Anchoring generally does not affect accuracy, but can greatly diminish the amount of memory required for alignment.  In Fig. \ref{f2}, the largest white box represents the maximal memory space required with anchoring, while the entire alignment space (grey plus white areas) would be required without anchoring.  The longest pair of sequence profiles that can be aligned without anchoring is about 46 thousand nucleotides, as shown by the end of the red dotted line in Figure \ref{f3}.  If regularly spaced anchor points are available then the maximum sequence length is greatly extended.  In the vast majority of cases anchoring gives the same result as without anchoring, but with less time and memory space required.
 
 %------------------------------------------------------------
 \section{Alignment Accuracy}
 %------------------------------------------------------------
 
-Figure 4 compares the performance of \Rpackage{DECIPHER} and other sequence alignment software on structural amino acid benchmarks \cite{Edgar:2010}.  All benchmarks have flaws, some of which can easily be found by eye in highly similar sequence sets, and therefore benchmark results should treated with care \cite{Iantorno:2014}.  As can be seen in the figure, the performance of \Rpackage{DECIPHER} is similar to that of other popular alignment software such as MAFFT \cite{Katoh:2002} and MUSCLE \cite{Edgar:2004}.  Further benchmarking shows that \Rpackage{DECIPHER} outperforms other programs on large sequence sets \cite{Wright:2015}.  Nevertheless, the accuracy of protein alignment begins to drop-off when sequences in the reference alignment have less than 40\% average pairwise identity.
+Figure \ref{f4} compares the performance of \Rpackage{DECIPHER} to other sequence alignment software on structural amino acid benchmarks \cite{Edgar:2010}.  All benchmarks have flaws, some of which can easily be found by eye in highly similar sequence sets, and therefore benchmark results should treated with care \cite{Iantorno:2014}.  As can be seen in the figure, the performance of \Rpackage{DECIPHER} is similar to that of other popular alignment software such as MAFFT \cite{Katoh:2002} and MUSCLE \cite{Edgar:2004} for smaller benchmarks.  However, \Rpackage{DECIPHER} outperforms other programs on large sequence sets (Fig. \ref{f5}), and its relative advantage continues increase as more sequences are aligned \cite{Wright:2015}.  Importantly, this is because \Rpackage{DECIPHER} exhibits far less fall-off in accuracy as additional sequences are added.
 
-A similar decline in performance is observed with DNA/RNA sequences, but the drop-off occurs much earlier at around 60\% sequence identity.  Therefore, it is generally preferable to align coding sequences by their translation using \Rfunction{AlignTranslation}.  This function first translates the input DNA/RNA sequences, then aligns the translation, and finally (conceptually) reverse translates the amino acid sequences to obtain aligned DNA/RNA sequences.  Nevertheless, even protein alignment cannot be considered reliable when the sequences being aligned differ by more than 70\%.
+The accuracy of protein alignment begins to drop-off when sequences in the reference alignment have less than 40\% average pairwise identity (Fig. \ref{f4}).  A similar decline in performance is observed with DNA/RNA sequences, but the drop-off occurs much earlier at around 60\% sequence identity.  Therefore, it is generally preferable to align coding sequences by their translation using \Rfunction{AlignTranslation}.  This function first translates the input DNA/RNA sequences, then aligns the translation, and finally (conceptually) reverse translates the amino acid sequences to obtain aligned DNA/RNA sequences.  Nevertheless, even protein alignment cannot be considered reliable when the sequences being aligned differ by more than 70\%.
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=1\textwidth]{AlignmentBenchmarks}
-\caption{\label{f4} Performance comparison between different programs for multiple alignment \cite{Thompson:1994,Edgar:2004,Katoh:2002,Wright:2015} using amino acid structural benchmarks.  The x-axis shows percent identity between sequences in each reference alignment.  The y-axis gives the percentage of correctly aligned residues in the estimated alignment according to the reference alignment (i.e., the SP-score).  The upper-left plot is for the PREFAB (version 4) benchmark \cite{Edgar:2004}.  The upper-right plot shows the results of the BALIBASE (version 3) benchmark \cite{Thompson:2005}.  The lower-left plot is for SABMARK (version 1.65) \cite{VanWalle:2005}.  The lower-right plot gives the results on the OXBENCH alignments \cite{Raghava:2003}.  A comparison of these benchmarks can be found in reference \cite{Edgar:2010}.}
+\caption{\label{f4} Performance comparison between different programs for multiple alignment \cite{Thompson:1994,Edgar:2004,Katoh:2002,Wright:2015} using amino acid structural benchmarks.  The x-axis shows percent identity between sequences in each reference alignment.  The y-axis gives the percentage of correctly aligned residues in the estimated alignment according to the reference alignment (i.e., the Q-score).  The upper-left plot is for the PREFAB (version 4) benchmark \cite{Edgar:2004}.  The upper-right plot shows the results of the BALIBASE (version 3) benchmark \cite{Thompson:2005}.  The lower-left plot is for SABMARK (version 1.65) \cite{VanWalle:2005}.  The lower-right plot gives the results on the OXBENCH alignments \cite{Raghava:2003}.  A comparison of these benchmarks can be found in reference \cite{Edgar:2010}.}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=1\textwidth]{HOMSTRAD-modBenchmarkResults}
+\caption{\label{f5} \Rpackage{DECIPHER} offers improved accuracy over other alignment programs (\cite{Edgar:2004,Katoh:2002,Pei:2007,Sievers:2011,Mirarab:2015,Wright:2015}) on large sets of input sequences.  Average accuracy on the Homstrad-mod benchmark \cite{Wright:2015} is shown for an increasing number of input sequences, ranging from 2 to 4,000.  All programs display a peak in accuracy at fewer than 500 sequences, but \Rpackage{DECIPHER} exhibits the least drop-off in accuracy as additional input sequences are added.}
 \end{center}
 \end{figure}
 
@@ -197,13 +204,13 @@ A similar decline in performance is observed with DNA/RNA sequences, but the dro
 \section{Recommendations for optimal performance}
 %------------------------------------------------------------
 
-\Rpackage{DECIPHER} has a number of alignment functions and associated parameters.  The flow-chart in Figure 5 is intended to simplify this process for the most frequently encountered multiple sequence alignment tasks.  For more information on any of these suggestions, refer to the examples in the following sections of this vignette.
+\Rpackage{DECIPHER} has a number of alignment functions and associated parameters.  The flow-chart in Figure \ref{f7} is intended to simplify this process for the most frequently encountered multiple sequence alignment tasks.  For more information on any of these suggestions, refer to the examples in the following sections of this vignette.
 
 \begin{figure}
 \begin{center}
 \includegraphics[height=0.6\textheight,keepaspectratio]{AlignmentFlowChart}
 \end{center}
-\caption{\label{f5} Flow-chart depicting how to choose the best combination of alignment functions and parameters for the most common multiple sequence alignment problems.}
+\caption{\label{f7} Flow-chart depicting how to choose the best combination of alignment functions and parameters for the most common multiple sequence alignment problems.}
 \end{figure}
 
 \clearpage
@@ -309,16 +316,16 @@ The number of sequences required to fit into memory when aligning two sequence s
 
 \subsection{Example:  Building a Guide Tree}
 
-The \Rfunction{AlignSeqs} function uses a guide tree to decide the order in which to align pairs of sequence profiles.  The \Rfunarg{guideTree} input is a \Rclass{dendrogram} (tree) object with one leaf per input sequence.  By default this guide tree is generated directly from the input sequences using the order of shared k-mers (i.e., when the argument \Rfunarg{guideTree} is \code{NULL}).  This default guide tree performs very well, but it may be desirable or necessary to specify an input guide tree when aligning thousands of sequences.  For example, beyond 46,340 sequences an alternative guide tree is always required because this is the largest guide tree that can be constructed by \Rpackage{DECIPHER}.
+The \Rfunction{AlignSeqs} function uses a guide tree to decide the order in which to align pairs of sequence profiles.  The \Rfunarg{guideTree} input is a \Rclass{dendrogram} (tree) object with one leaf per input sequence.  By default this guide tree is generated directly from the input sequences using the order of shared k-mers (i.e., when the argument \Rfunarg{guideTree} is \code{NULL}).  This default guide tree performs very well, but it is necessary to specify an alternative guide tree when aligning more than 46,340 sequences, because this is the largest guide tree that can be automatically constructed by \Rpackage{DECIPHER}.
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=1\textwidth]{DefaultVsChainedGuideTrees}
-\caption{\label{f6} Comparison between the default and chained guide trees when aligning increasing numbers of Cytochrome P450 sequence sets.  Use of a chained guide tree often provides an alignment with equivalent accuracy when aligning thousands of protein sequences.}
+\caption{\label{f7} Comparison between the default and chained guide trees when aligning increasing numbers of Cytochrome P450 sequence sets.  The top panel shows average pairwise homology shared with the reference alignment (Q-score) and the bottom panel shows the average fraction of alignment columns that are exactly shared with the reference alignment (TC-score).}
 \end{center}
 \end{figure}
 
-As the number of sequences being aligned increases beyond a certain point, the performance of the default guide tree tends to diminish.  It has been shown that reasonably accurate alignments of tens of thousands of sequences can be obtained by using a chain guide tree \cite{Boyce:2014}.  With a chained guide tree, sequences are added one-by-one to a growing profile representing all of the aligned sequences.  Figure 6 shows the result of using \Rpackage{DECIPHER} to align increasing numbers of Cytochrome P450 sequences (in accordance with the method in reference \cite{Boyce:2014}), using either a chained guide tree or the default guide tree.  A chained guide tree allows for faster alignment and provides reasonable quality when many thousands of sequences are being aligned.  A chained guide tree can be easily generated, as shown below.
+It has been shown that reasonably accurate alignments of tens of thousands of sequences can be obtained by using a chain guide tree \cite{Boyce:2014}.  With a chained guide tree, sequences are added one-by-one to a growing profile representing all of the aligned sequences.  Figure \ref{f7} shows the result of using \Rpackage{DECIPHER} to align increasing numbers of Cytochrome P450 sequences (in accordance with the method in reference \cite{Boyce:2014}), using either a chained guide tree or the default guide tree.  A chained guide tree can be easily generated, as shown below.
 
 <<expr5,eval=FALSE,echo=TRUE>>=
 # form a chained guide tree
@@ -341,7 +348,7 @@ DNA <- AlignTranslation(dna,
 	refinements=0)
 @
 
-Use of a chained guide tree is recommended when aligning more than ten thousand sequences for purposes other than phylogenetics.  With a moderate number of sequences, the automatically generated (default) guide tree tends to provide the best result, especially if the input sequences vary in width considerably.  It is also possible to read a Newick formatted tree into \R{} using the function \Rfunction{ReadDendrogram}, and specify this object as the input \Rfunarg{guideTree}.
+It is also possible to read a Newick formatted tree into \R{} using the function \Rfunction{ReadDendrogram}, and specify this object as the input \Rfunarg{guideTree}.
 
 \subsection{Example:  Post-processing an existing multiple alignment}
 
@@ -357,9 +364,9 @@ All \Rpackage{DECIPHER} multiple sequence alignments are optimized using \Rfunct
 DNA_adjusted <- AdjustAlignment(DNA)
 @
 
-It is common to use alignment as the initial step in the creation of a phylogenetic tree.  \Rpackage{DECIPHER}, like the majority of alignment programs, attempts to maximize homologous positions between the sequences being aligned.  Such an alignment is particularly useful when investigating which residues are in the same structural position of a protein.  However, disparate sequence regions tend to be concentrated into the same ``gappy'' areas of the alignment.  When viewed from a phylogenetic perspective these homologies have highly implausible insertion/deletion scenarios.
+It is common to use alignment as a preliminary step before the creation of a phylogenetic tree.  \Rpackage{DECIPHER}, like the majority of alignment programs, attempts to maximize homologous positions between the sequences being aligned.  Such an alignment is particularly useful when investigating which residues are in the same structural position of a protein.  However, disparate sequence regions tend to be concentrated into the same ``gappy'' areas of the alignment.  When viewed from a phylogenetic perspective these homologies have highly implausible insertion/deletion scenarios.
 
-To mitigate the problem of false homologies, \Rfunction{StaggerAlignment} will automatically generate a staggered version of an existing alignment.  Staggered alignments separate potentially non-homologous regions into separate columns of the alignment.  The result is an alignment that is less visually appealing, but likely more accurate from a phylogenetic perspective.  As such, this is an important post-processing step whenever the alignment will be used to construct a phylogenetic tree (e.g., with \Rfunction{IdClusters}).
+To mitigate the problem of false homologies, \Rfunction{StaggerAlignment} will automatically generate a staggered version of an existing alignment.  Staggered alignments separate potentially non-homologous regions into separate columns of the alignment.  The result is an alignment that is less visually appealing, but likely more accurate from a phylogenetic perspective.  As such, this is an important post-processing step whenever the alignment will be used to construct a phylogenetic tree (e.g., with \Rfunction{DistanceMatrix} and \Rfunction{IdClusters}).
 
 <<expr10,eval=FALSE,echo=TRUE>>=
 DNA_staggered <- StaggerAlignment(DNA)
@@ -383,13 +390,13 @@ The output is a list, which each list component containing a \code{DNAStringSetL
 
 \clearpage
 
-It is also possible to display the blocks of synteny between all pairs of genomes.  In the scatterplot matrix shown below, the different genome segments (i.e., sequences) are separated by thin horizontal and vertical lines.  The syntenic blocks are diagonal lines that are composed of many homologous ``hits'' between the genomes.
+It is also possible to display the blocks of synteny between all pairs of genomes.  Figure \ref{f8} shows the different genome segments (i.e., sequences) are separated by thin horizontal and vertical lines.  The syntenic blocks are diagonal lines that are composed of many homologous ``hits'' between the genomes.
 
 \begin{centerfig}
 <<expr12,eval=TRUE,echo=TRUE,fig=TRUE,include=TRUE,height=8.5,width=8.5>>=
 pairs(synteny, boxBlocks=TRUE) # scatterplot matrix
 @
-\caption{Dot plots showing the homologous regions among five \emph{Influenza virus A} genomes.}
+\caption{\label{f8} Dot plots showing the homologous regions among five \emph{Influenza virus A} genomes.}
 \end{centerfig}
 
 \clearpage
@@ -432,11 +439,26 @@ toLatex(sessionInfo(), locale=FALSE)
 \newblock MAFFT: a novel method for rapid multiple sequence alignment based on fast Fourier transform.
 \newblock {\em Nucleic Acids Research}, 30(14), 3059-3066, 2002.
 
+\bibitem{Mirarab:2015}
+{Mirarab, S.}, {Nguyen, N.}, {Guo, S.}, {Wang, L.-S.}, {Kim, J.}, \& {Warnow, T.}
+\newblock PASTA: Ultra-Large Multiple Sequence Alignment for Nucleotide and Amino-Acid Sequences.
+\newblock {\em Journal of Computational Biology}, 22(5), 377-386, 2015.
+
+\bibitem{Pei:2007}
+{Pei, J.} \& {Grishin, N. V.}
+\newblock PROMALS: towards accurate multiple sequence alignments of distantly related proteins.
+\newblock {\em Bioinformatics}, 23(7), 802-808, 2007.
+
 \bibitem{Raghava:2003}
 {Raghava, G. P.}, {Searle, S. M.}, {Audley, P. C.}, {Barber, J. D.}, \& {Barton, G. J.}
 \newblock OXBench: a benchmark for evaluation of protein multiple sequence 
 alignment accuracy.
 \newblock {\em BMC Bioinformatics}, 4: 47, 2003.
+
+\bibitem{Sievers:2011}
+{Sievers, F.}, {Wilm, A.}, {Dineen, D.}, {Gibson, T. J.}, {Karplus, K.}, {Li, W.}, {Lopez, R.}, {McWilliam, H.}, {Remmert, M.}, {Soding, J.}, {Thompson, J.}, \& {Higgins, D.}
+\newblock Fast, scalable generation of high-quality protein multiple sequence alignments using Clustal Omega.
+\newblock {\em Molecular Systems Biology}, 7, 1-6, 2011.
 
 \bibitem{Thompson:1994}
 {Thompson, J. D.}, {Higgins, D. G.}, \& {Gibson, T. J.}
